full-moon/tests/roblox_cases/fail/tokenizer/unfinished-string-interpolation-with-new-line/source.lua
local x = `ab
cd`
print(1)
